--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,7 @@
         "no-console": ["warn"],
         "no-unused-vars": ["warn"],
         "no-useless-escape": ["warn"],
-        "semi": ["warn","never"]
+        "semi": [0]
     },
     "globals": {
         "moment": true,
