--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "grunt-browserify": "^5.2.0",
     "grunt-contrib-uglify": "git://github.com/gruntjs/grunt-contrib-uglify.git#harmony",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-eslint": "^20.1.0"
+    "grunt-eslint": "^20.1.0",
+    "grunt-notify": "^0.4.5"
   },
   "dependencies": {}
 }
