--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,8 @@
         "no-unused-vars": ["warn"],
         "no-useless-escape": [0],
         "semi": [0],
-        "no-debugger": [1]
+        "no-debugger": [1],
+        "no-trailing-spaces": [0]
     },
     "globals": {
         "moment": true,
