added email authorization to the admin page. After successful login, login form hides, blog entry form is created and logout button appears.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
         "lastId": true,
         "produceBlogDatabase": true,
         "projectString": true,
-        "$": true
+        "$": true,
+        "firebase": true
     }
 }
