--- a/package.json
+++ b/package.json
@@ -33,5 +33,7 @@
     "grunt-eslint": "^20.1.0",
     "grunt-notify": "^0.4.5"
   },
-  "dependencies": {}
+  "dependencies": {
+    "firebase": "^4.6.2"
+  }
 }
